# wnucheck-mvp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  pyproject.toml  run.sh  simple.env
frontend/: package-lock.json  package.json
frontend/src/pages/: AudioInput.tsx  CallScreen.tsx  ChatWindow.tsx  DialKeypad.tsx  HomeScreen.tsx  IncomingCallScreen.tsx  NewMessagePopup.tsx  Smartphone.tsx  index.tsx
frontend/src/styles/: Smartphone.module.css  globals.css
src/backend/: logging_config.py  main.py  models.py  requirements.txt  simple.env
src/backend/agents/: abstract_agent.py  fraud_detector.py  phone_scam_agent.py
src/backend/llm/: abstract_llm.py  exalome.py  mock_llm.py  openai_llm.py
src/backend/stt/: abstract_stt.py  openai_stt.py  whisper_stt.py
tests/backend/agents/: test_fraud_detector.py
